<resources>
    <string name="app_name">MeetMD</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="insurance_number">Insurance number:</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Login</string>
    <string name="temp_pass">Enter temporary password from SMS:</string>
    <string name="done">Done</string>
    <string name="set_new_pass">Set new password</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm the Password</string>

    <!-- Titles -->
    <string name="appointments_title">APPOINTMENTS</string>
    <string name="search_doctor_title">SEARCH DOCTOR</string>

    <string name="appointments">Appointments</string>
    <string name="navigation_menu">Navigation Menu</string>
    <string name="search_doctor">Search Doctor</string>
    <string name="surveys">Surveys</string>
    <string name="news">News</string>
    <string name="reminders">Reminders</string>
    <string name="chat">Chat</string>
    <string name="settings">Settings</string>
    <string name="tutorial">Tutorial</string>
    <string name="emergency">Emergency</string>
    <string name="information">INFORMATION</string>
    <string name="knowledge">Knowledge:</string>
    <string name="friendliness">Friendliness:</string>
    <string name="punctuality">Punctuality:</string>
    <string name="helpfulness">Helpfulness:</string>
    <string name="overall">Overall:</string>
    <string name="search_doctor_header">SEARCH DOCTOR</string>
    <string name="name">Name</string>
    <string name="speciality">Specialty</string>
    <string name="location">Location</string>
    <string name="search">Search:</string>
    <string name="rating">Rating:</string>
    <string name="change_btn">CHANGE</string>
    <string name="cancel">CANCEL</string>
    <string name="confirm">CONFIRM</string>
    <string name="payment">Your last payment was 12/11/15</string>
    <string name="survey">SURVEY</string>
    <string name="news_header">NEWS</string>
    <string name="reminder_header">REMINDER</string>
    <string name="cancel_appointment">Cancel Appointment</string>
    <string name="cancel_request">Are you sure you want to cancel this appointment?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="choose_reason_of_cancel">Please choose the reason of cancel</string>
    <string name="i_dont_need_a_doctor">I don\u0027t need a doctor anymore</string>
    <string name="i_have_choosen_another_doctor">I have chosen another doctor</string>
    <string name="appointment_not_cancelled">Error! Appointment not canceled</string>
</resources>
