<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fitsSystemWindows="true"
    app:popupTheme="@style/AppTheme"
    >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/windowBackground">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/information"
                android:layout_gravity="center"
                android:id="@+id/toolbar_title"
                android:focusableInTouchMode="false"
                android:textIsSelectable="false"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:textStyle="normal" />
        </android.support.v7.widget.Toolbar>
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:longClickable="false"
            android:background="#fff"
            android:id="@+id/relativeLayout">

            <ImageView
                android:scaleType="fitXY"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/doctorImage"
                android:src="@drawable/revolver"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="22dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/doctorName"
                android:layout_alignTop="@+id/doctorImage"
                android:layout_toRightOf="@+id/doctorImage"
                android:layout_marginLeft="20dp"
                android:text="Paul Eddison"
                android:selectAllOnFocus="false"
                android:textColor="@color/black"
                android:textSize="22sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/speciality"
                android:layout_marginTop="22dp"
                android:text="Speciality: Oculist"
                android:textColor="@color/black"
                android:layout_below="@+id/doctorName"
                android:layout_alignLeft="@+id/doctorName"
                android:layout_alignStart="@+id/doctorName"
                android:textSize="20sp" />


            <TextView
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/location"
                android:text="Location: San Luchia 08854, Rio Grande hospital, Colorado street 23"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_below="@+id/doctorImage"
                android:layout_alignLeft="@+id/doctorImage"
                android:layout_alignStart="@+id/doctorImage" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_margin="32dp"
                android:layout_below="@+id/location"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/knowledge"
                        android:id="@+id/textView"
                        android:textColor="@color/black"
                        android:textSize="22sp"/>

                    <RatingBar

                        android:layout_gravity="center_vertical"
                        style="@style/StarRatingBar"
                        android:id="@+id/rating0"
                        android:layout_height="50dp"
                        android:layout_width="wrap_content"
                        android:numStars="2"
                        android:rating="0"
                        android:isIndicator="true"
                        android:stepSize="1"
                        android:theme="@style/Base.TextAppearance.AppCompat" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/friendliness"
                        android:id="@+id/textView2"
                        android:textColor="@color/black"
                        android:textSize="22sp"/>

                    <RatingBar
                        android:layout_gravity="center_vertical"
                        android:id="@+id/rating1"
                        style="@style/StarRatingBar"
                        android:layout_height="50dp"
                        android:layout_width="wrap_content"
                        android:numStars="5"
                        android:rating="5"
                        android:isIndicator="true" />

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/punctuality"
                        android:id="@+id/textView3"
                        android:textColor="@color/black"
                        android:textSize="22sp" />

                    <RatingBar
                        android:id="@+id/rating2"
                        android:layout_gravity="center_vertical"
                        style="@style/StarRatingBar"
                        android:layout_height="50dp"
                        android:layout_width="wrap_content"
                        android:numStars="5"
                        android:rating="4"
                        android:isIndicator="true" />

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/helpfulness"
                        android:id="@+id/textView4"
                        android:textColor="@color/black"
                        android:textSize="22sp" />

                    <RatingBar
                        android:id="@+id/rating3"
                        android:layout_gravity="center_vertical"
                        style="@style/StarRatingBar"
                        android:layout_height="50dp"
                        android:layout_width="wrap_content"
                        android:numStars="5"
                        android:rating="3.5"
                        android:isIndicator="true" />

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/overall"
                        android:id="@+id/textView5"
                        android:textColor="@color/black"
                        android:textSize="22sp" />

                    <RatingBar
                        android:id="@+id/rating4"
                        android:layout_gravity="center_vertical"
                        style="@style/StarRatingBar"
                        android:layout_height="50dp"
                        android:layout_width="wrap_content"
                        android:numStars="5"
                        android:rating="5"
                        android:isIndicator="true"/>

                </LinearLayout>
            </LinearLayout>

            <!--style="?android:attr/ratingBarStyleSmall"-->

        </RelativeLayout>
    </android.support.design.widget.AppBarLayout>


    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/navigation_view_background"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigation_menu" />

</android.support.v4.widget.DrawerLayout>