<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fitsSystemWindows="true"
    app:popupTheme="@style/AppTheme"
    tools:context=".DoctorChooseTimeActivity">
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:background="@color/windowBackground">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:gravity="center">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:focusableInTouchMode="false"
                    android:text="@string/appointments_title"
                    android:textColor="@color/white"
                    android:textIsSelectable="false"
                    android:textSize="24sp"
                    android:textStyle="normal" />
            </android.support.v7.widget.Toolbar>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"

                android:background="@color/white"
                android:orientation="vertical">
                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/relativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:longClickable="false"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/doctorImage"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="0dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="32dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/revolver" />

                    <TextView
                        android:id="@+id/doctorName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/doctorImage"
                        android:layout_marginLeft="20dp"
                        android:layout_toRightOf="@+id/doctorImage"
                        android:selectAllOnFocus="false"
                        android:text="Paul Eddison"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                    <TextView
                        android:id="@+id/speciality"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/doctorName"
                        android:layout_alignStart="@+id/doctorName"
                        android:layout_below="@+id/doctorName"
                        android:layout_marginTop="25dp"
                        android:text="Speciality: Oculist"
                        android:textColor="@color/black"
                        android:textSize="17sp" />


                    <RatingBar
                        android:id="@+id/rating0"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/textView6"
                        android:layout_alignEnd="@+id/speciality"
                        android:layout_alignRight="@+id/speciality"
                        android:layout_marginBottom="3dp"
                        android:layout_marginRight="-10dp"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:rating="5" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/speciality"
                        android:layout_alignStart="@+id/speciality"
                        android:layout_below="@+id/speciality"
                        android:layout_marginTop="25dp"
                        android:text="@string/rating"
                        android:textColor="@color/black"
                        android:textIsSelectable="false"
                        android:textSize="18sp" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="10dp"
                    android:text="Date: 22 cotober 2015"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="10dp"
                    android:text="Time: 13:00 - 13:30"
                    android:textColor="@color/black"
                    android:textIsSelectable="false"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="32dp"
                    android:text="Location: San Luchia 08854, Rio Grande hospital, Colorado street 23"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/change"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:onClick="onClickChange"
                        android:text="@string/change_btn"
                        android:textColor="@color/colorPrimary"
                        />

                    <Button
                        android:id="@+id/cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:background="@color/white"
                        android:onClick="onClickCancel"
                        android:text="@string/cancel"
                        android:textColor="@color/colorPrimary"
                        />
                </LinearLayout>

            </LinearLayout>
        </android.support.design.widget.AppBarLayout>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/navigation_view_background"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigation_menu" />

</android.support.v4.widget.DrawerLayout>